# aws-sdk-rust

./: Cargo.toml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: audit.yaml  canary.yaml  handle-stale-discussions.yml
